# flatcc-zephyr

./: .gitignore  .gitmodules  Doxyfile  NOTICE  README.md
.github/workflows/: docs.yml  test.yml
modules/lib/flatcc-zephyr/: README.md
modules/lib/flatcc-zephyr/include/flatcc/: flatcc_alloc_zephyr.h
modules/lib/flatcc-zephyr/src/: flatcc_alloc_zephyr.c
modules/lib/flatcc-zephyr/zephyr/: CMakeLists.txt  Kconfig  module.yml
samples/flatcc_basic/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/flatcc_basic/src/: main.c
samples/flatcc_monster/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/flatcc_monster/src/: main.c
zephyr/: module.yml
